# claude-queue

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_TASK_GUIDE.md  DEVELOPMENT.md  LICENSE  README.md  claude-queue.py  pyproject.toml
skills/queue-task/: SKILL.md
tests/: circular-dependency.yaml  conftest.py  no-dependencies.yaml  simple-dependencies.yaml  test_batch.py  test_dependencies.py  test_queue.py  test_usage_checker.py  test_worker.py
