[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-queue"
version = "0.1.0"
license = {text = "MIT"}
description = "A task queue system for batching Claude Code tasks with automatic retry on rate limits"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Vasiliy Kiryanov", email = "vasiliy.kiryanov@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "types-requests>=2.33.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=4.6.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = false

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "E402",  # Module level import not at top - expected with dynamic module loading
]